<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yh_target_target_name"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/yh_txt_target_create_name"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/yh_biankuang_yuanjiao_5dp_4"
        android:gravity="center_vertical"
        android:hint="@string/yh_txt_do_not_more_than_40"
        android:padding="4dp"
        android:textSize="14sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/yh_target_target_describe"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/yh_txt_target_create_describe"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/yh_biankuang_yuanjiao_5dp_4"
        android:gravity="top"
        android:hint="@string/yh_target_target_describe_hint"
        android:padding="4dp"
        android:textSize="14sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/yh_target_target_explain"
        android:textSize="16sp" />

</LinearLayout>